# fenix-rs

./: Cargo.toml  rustfmt.toml
assets/: shader.frag  shader.vert
fenix-app/: Cargo.toml
fenix-app/src/: main.rs
fenix-core/: Cargo.toml
fenix-core/src/: lib.rs  logging.rs  shader.rs
fenix-renderer/: Cargo.toml
fenix-renderer/src/: buffer.rs  lib.rs  math.rs  shader.rs  texture.rs  vertex_array.rs
fenix-utils/: Cargo.toml
fenix-utils/src/: camera.rs  lib.rs  math.rs
