[package]
name = "fenix-app"
version = "0.1.0"
description = "3D rendering application"
authors = ["Miguel García Soler"]
edition = "2021"

[[bin]]
name = "fenix"
path = "src/main.rs"

[dependencies]
fenix-core = { path = "../fenix-core" }
fenix-utils = { path = "../fenix-utils" }
fenix-renderer = { path = "../fenix-renderer" }

glfw = "0.50.0"     # Window and OpenGL context
glam = "0.22.0"     # Math library
gl = "0.6.0"        # OpenGL bindings
log = "0.4.17"      # Logging API
# image = "0.24.5"    # Image parser
# chrono = "0.4.23"   # Date and time
# bytemuck = "1.12.3" # Type casts

