[package]
name = "fenix-renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.6.0"        # OpenGL bindings
glam = "0.22.0"     # Math library
image = "0.24.5"    # Image parser
chrono = "0.4.23"   # Date and time
bytemuck = "1.12.3" # Type casts
log = "0.4.17"      # Logging API

